# mimic-iv-copd-raas-analysis

./: .gitignore  README.md  REPRODUCIBILITY.md  pyproject.toml  requirements-lock.txt  requirements.txt
docs/: 01_icu_cohort_SHORT.md  02_cohort_and_exposures_SHORT.md  03a_baseline_SHORT.md  03b_merge_exposures_SHORT.md  04a_outcomes_and_modeling_SHORT.md  04b_outcomes_and_modeling_raas_subgroups_SHORT.md  04c_extended_covariate_cox_model_SHORT.md  04d_python_logistic_model_SHORT.md  05_sas_python_validation_SHORT.md  DISCUSSION_AND_LIMITATIONS.md  FIGURE_REPRODUCIBILITY.md  METHODS_OVERVIEW.md  PACE.md  RESULTS_SUMMARY.md  STUDY_BACKGROUND.md  VALIDATION_NOTES.md  copd_raas_survival_report.html  mimic_modernization_plan.md
notebooks/: 01_icu_cohort.ipynb  02_cohort_and_exposures.ipynb  03a_baseline.ipynb  03b_merge_exposures.ipynb  04a_outcomes_and_modeling.ipynb  04b_outcomes_and_modeling_raas_subgroups.ipynb  04c_extended_covariate_cox_model.ipynb  04d_python_logistic_model.ipynb  05_sas_python_validation.ipynb
reports/: .gitignore  _quarto.yml  copd_raas_survival_report.html  copd_raas_survival_report.qmd
sas/: README.md
sas/programs/: 01_import.sas  01_import_cohort.sas  02_baseline_characteristics.sas  02_baseline_table.sas  03_univariate_analysis.sas  04_cox_regression.sas  05_cox_diagnostics.sas  (+3 more)
scripts/: validation_checklist.py
sql/: 01_extract_base.sql  02_build_cohort_copd.sql  02_exposure_raas.sql  02_exposure_raas_detailed.sql  03_build_baseline.sql  03_merge_exposures.sql  04_build_outcomes.sql  04_build_outcomes_extended.sql
