[project]
name = "mimic-iv-copd-raas-analysis"
version = "0.1.0"
description = "Reproducible MIMIC-IV COPD RAAS survival-analysis portfolio project"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "db-dtypes==1.5.1",
    "google-cloud-bigquery==3.41.0",
    "jupyter",
    "lifelines",
    "matplotlib==3.10.9",
    "numpy==2.2.6",
    "pandas==2.3.3",
    "pandas-gbq",
    "pyarrow==24.0.0",
    "statsmodels",
]

[tool.uv]
package = false
